<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Musical Structure App</string>
    <!-- Title for song title. [CHAR LIMIT=12] -->
    <string name="song_title">Na lingi yo</string>
    <string name="song_artist">Fally Ipupa</string>
    <string name="song_duration">2:35</string>
    <!-- Field name for Songs. [CHAR LIMIT=12] -->
    <string name="field_songs">Songs</string>
    <!-- Field name for Albums. [CHAR LIMIT=12] -->
    <string name="field_albums">Albums</string>
    <!-- Field name for Artists. [CHAR LIMIT=12] -->
    <string name="field_artists">Artists</string>
    <!-- Field name for Store. [CHAR LIMIT=12] -->
    <string name="field_store">Store</string>
    <!-- Field name for Search. [CHAR LIMIT=12] -->
    <string name="field_search">Search</string>
    <!-- Field name for Now Playing. [CHAR LIMIT=12] -->
    <string name="field_now_playing">Playing</string>
    <!--Albums-->
    <string name="album_title">Tokosss</string>
    <string name="album_artist">Fally Ipupa</string>
    <string name="album_duration">2 hours</string>
    <!--Stores-->
    <string name="store_spotify">Shop Musics on Spotify</string>
    <string name="store_amazon">Shop Musics on Amazon Music</string>
    <string name="store_google">Shop Musics on Google Play Music</string>
    <string name="store_itunes">Shop Musics on iTunes</string>
    <!--Content Descriptions-->
    <string name="play_image_button">Play</string>
    <string name="skip_previous_image_button">Skip previous</string>
    <string name="skip_forward_image_button">Skip forward</string>
    <string name="online_store">Online stores</string>
</resources>
