<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_weight="10"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/previous_img"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:layout_marginRight="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@drawable/ic_skip_previous_black_24dp"
            android:minHeight="@dimen/_48dp"
            android:minWidth="@dimen/_48dp"
            android:contentDescription="@string/skip_previous_image_button"/>

        <ImageButton
            android:id="@+id/play_img"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:background="@drawable/ic_play_arrow_black_24dp"
            android:minHeight="@dimen/_48dp"
            android:minWidth="@dimen/_48dp"
            android:contentDescription="@string/play_image_button"/>

        <ImageButton
            android:id="@+id/next_img"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:layout_marginLeft="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:background="@drawable/ic_skip_next_black_24dp"
            android:minHeight="@dimen/_48dp"
            android:minWidth="@dimen/_48dp"
            android:contentDescription="@string/skip_forward_image_button"/>
    </LinearLayout>
</LinearLayout>
